# docopt.hs

./: .gitignore  ApplicativeParsec.hs  CHANGELOG.md  Docopt.cabal  Docopt.hs  README.md  docopt.cabal  echoArgs.hs  stack.yaml
.ci/: all_check.py  cabal.project.local  cabal.project.local-lower  cabal.project.local-upper  stack-8.10.yaml  stack-8.8.yaml  stack-9.0.yaml  stack-9.10.yaml  stack-9.2.yaml  stack-9.4.yaml  stack-9.6.yaml  stack-9.8.yaml
.github/workflows/: ci.yaml
System/Console/: Docopt.hs
System/Console/Docopt/: ApplicativeParsec.hs  NoTH.hs  OptParse.hs  ParseUtils.hs  Public.hs  QQ.hs  Types.hs  UsageParse.hs
System/Console/Docopt/QQ/: Instances.hs  Util.hs
examples/: Naval_fate.hs  Simple.hs  docopt-examples.cabal  naval_fate.USAGE.txt
examples/NavalFate/: Main.hs  NoTH.hs  Shared.hs  USAGE.docopt
test/: LangAgnosticTests.hs  Naval_fate.hs  Naval_fate2.hs  naval_fate.USAGE.txt  regressions.txt  test_usage.txt  testcases.docopt
