name:                Docopt
version:             0.1.0.0
synopsis:            A command-line interface description language and parser
-- description:         

license:             MIT
license-file:        LICENSE.txt
author:              Ryan Artecona
maintainer:          ryanartecona@gmail.com
copyright:           (c) 2013 Ryan Artecona 

stability:           Experimental
category:            Console

build-type:          Simple
cabal-version:       >=1.8


library
  exposed-modules:     System.Console.Docopt
  
  other-modules:       System.Console.Docopt.ApplicativeParsec
  
  build-depends:       base == 4.5.*,
                       parsec == 3.1.*,
                       containers
