name:                docopt
version:             0.1.0.0
synopsis:            A command-line interface description language and parser that will make you smile
-- description:         (TODO)

license:             MIT
license-file:        LICENSE.txt
author:              Ryan Artecona
maintainer:          ryanartecona@gmail.com
copyright:           (c) 2013 Ryan Artecona 

stability:           Experimental
category:            Console

build-type:          Simple
cabal-version:       >=1.8


library
  exposed-modules:    System.Console.Docopt
 
  other-modules:      System.Console.Docopt.ApplicativeParsec
                      System.Console.Docopt.ParseUtils
                      System.Console.Docopt.Types
                      System.Console.Docopt.UsageParse
                      System.Console.Docopt.OptParse
                      System.Console.Docopt.Public

  build-depends:      base == 4.5.*,
                      parsec == 3.1.*,
                      containers

test-suite tests
  type:               exitcode-stdio-1.0
  hs-source-dirs:     ./, test
  main-is:            LangAgnosticTests.hs

  build-depends:      base == 4.*,
                      parsec == 3.1.*,
                      containers,
                      docopt,
                      split,
                      ansi-terminal,
                      aeson,
                      bytestring == 0.9.*

  other-modules:      System.Console.Docopt.Types,
                      System.Console.Docopt.ParseUtils,
                      System.Console.Docopt.UsageParse,
                      System.Console.Docopt.OptParse
