name:                docopt
version:             0.6.0
synopsis:            A command-line interface description language and parser that will make you smile
description:         Docopt parses command-line interface usage text that adheres to a familiar syntax, and from it builds a command-line argument parser that will ensure your program is invoked correctly with the available options specified in the usage text. This allows the developer to write a usage text and get an argument parser for free.

license:             MIT
license-file:        LICENSE.txt
author:              Ryan Artecona
maintainer:          ryanartecona@gmail.com
copyright:           (c) 2013 Ryan Artecona 

stability:           Experimental
category:            Console

build-type:          Simple
cabal-version:       >=1.8


library
  exposed-modules:    System.Console.Docopt
 
  other-modules:      System.Console.Docopt.ApplicativeParsec
                      System.Console.Docopt.ParseUtils
                      System.Console.Docopt.Types
                      System.Console.Docopt.UsageParse
                      System.Console.Docopt.OptParse
                      System.Console.Docopt.Public

  build-depends:      base == 4.*,
                      parsec == 3.1.*,
                      containers

test-suite tests
  type:               exitcode-stdio-1.0
  hs-source-dirs:     ./, test
  main-is:            LangAgnosticTests.hs

  build-depends:      base == 4.*,
                      parsec == 3.1.*,
                      containers,
                      docopt,
                      split,
                      ansi-terminal,
                      aeson,
                      bytestring == 0.10.*

  other-modules:      System.Console.Docopt.Types,
                      System.Console.Docopt.ParseUtils,
                      System.Console.Docopt.UsageParse,
                      System.Console.Docopt.OptParse
