name:                docopt
version:             0.7.0.1
synopsis:            A command-line interface parser that will make you smile
description:         Docopt parses command-line interface usage text that adheres to a familiar syntax, and from it builds a command-line argument parser that will ensure your program is invoked correctly with the available options specified in the usage text. This allows the developer to write a usage text and get an argument parser for free.

license:             MIT
license-file:        LICENSE.txt
author:              Ryan Artecona
maintainer:          ryanartecona@gmail.com
copyright:           (c) 2013-2015 Ryan Artecona

category:            Console

build-type:          Simple
cabal-version:       >=1.8

homepage:            https://github.com/docopt/docopt.hs
bug-reports:         https://github.com/docopt/docopt.hs/issues

extra-source-files:  README.md
                     CHANGELOG.md

flag template-haskell
  default:      True
  manual:       True
  description:
    Build with QuasiQuoter usage parsers, which requires Template Haskell

library
  exposed-modules:    System.Console.Docopt.NoTH

  other-modules:      System.Console.Docopt.ApplicativeParsec
                      System.Console.Docopt.ParseUtils
                      System.Console.Docopt.Types
                      System.Console.Docopt.UsageParse
                      System.Console.Docopt.OptParse
                      System.Console.Docopt.Public

  build-depends:      base == 4.*,
                      parsec == 3.1.*,
                      containers

  ghc-options:        -Wall -fno-warn-unused-do-bind

  if impl(ghc >= 6.10) && flag(template-haskell)
    exposed-modules:  System.Console.Docopt
    other-modules:    System.Console.Docopt.QQ
                      System.Console.Docopt.QQ.Instances
    build-depends:    template-haskell >= 2.7 && < 3.0,
                      th-lift >= 0.7 && < 1.0

test-suite tests
  type:               exitcode-stdio-1.0
  hs-source-dirs:     ./, test
  main-is:            LangAgnosticTests.hs

  build-depends:      base == 4.*,
                      parsec == 3.1.*,
                      containers,
                      docopt,
                      split,
                      ansi-terminal,
                      aeson,
                      bytestring == 0.10.*

  other-modules:      System.Console.Docopt.Types,
                      System.Console.Docopt.ParseUtils,
                      System.Console.Docopt.UsageParse,
                      System.Console.Docopt.OptParse
