name:                docopt
version:             0.7.0.8
synopsis:            A command-line interface parser that will make you smile
description:         Docopt parses command-line interface usage text that adheres to a familiar syntax, and from it builds a command-line argument parser that will ensure your program is invoked correctly with the available options specified in the usage text. This allows the developer to write a usage text and get an argument parser for free.

license:             MIT
license-file:        LICENSE.txt
author:              Ryan Artecona
maintainer:          QBayLogic B.V. <devops@qbaylogic.com>
copyright:           (c) 2013-2015 Ryan Artecona
tested-with:
  GHC == 8.0.2,
  GHC == 8.2.2,
  GHC == 8.4.4,
  GHC == 8.6.5,
  GHC == 8.8.4,
  GHC == 8.10.7,
  GHC == 9.0.2,
  GHC == 9.2.8,
  GHC == 9.4.7,
  GHC == 9.6.3,
  GHC == 9.8.1

category:            Console

build-type:          Simple
cabal-version:       >=1.10

homepage:            https://github.com/docopt/docopt.hs
bug-reports:         https://github.com/docopt/docopt.hs/issues

extra-source-files:  README.md
                     CHANGELOG.md

data-files:          test/testcases.docopt
                     test/regressions.txt

source-repository head
  type:       git
  location:   https://github.com/docopt/docopt.hs.git

source-repository this
  type:       git
  location:   https://github.com/docopt/docopt.hs.git
  tag:        v0.7.0.8

library
  exposed-modules:    System.Console.Docopt.NoTH
                      System.Console.Docopt

  other-modules:      System.Console.Docopt.ApplicativeParsec
                      System.Console.Docopt.ParseUtils
                      System.Console.Docopt.Types
                      System.Console.Docopt.UsageParse
                      System.Console.Docopt.OptParse
                      System.Console.Docopt.Public
                      System.Console.Docopt.QQ
                      System.Console.Docopt.QQ.Instances

  build-depends:      base >= 4.9 && < 5.0,
                      parsec >= 3.1.14 && < 3.2,
                      containers >= 0.6.2 && < 0.8,
                      template-haskell >= 2.11.0 && < 2.22

  ghc-options:        -Wall -Wno-name-shadowing

  default-language:   Haskell2010

test-suite tests
  type:               exitcode-stdio-1.0
  hs-source-dirs:     ./, test
  main-is:            LangAgnosticTests.hs

  ghc-options:        -Wall -Wno-name-shadowing

  build-depends:      base,
                      parsec,
                      containers,
                      docopt,
                      HUnit,
                      split,
                      ansi-terminal >= 0.4,
                      aeson,
                      bytestring,
                      text,
                      template-haskell

  other-modules:      System.Console.Docopt
                      System.Console.Docopt.ApplicativeParsec
                      System.Console.Docopt.ParseUtils
                      System.Console.Docopt.Types
                      System.Console.Docopt.UsageParse
                      System.Console.Docopt.OptParse
                      System.Console.Docopt.Public
                      System.Console.Docopt.QQ
                      System.Console.Docopt.QQ.Instances
                      Paths_docopt

  default-language:   Haskell2010
