name:                docopt-examples
version:             0.0.0.0
build-type:          Simple
cabal-version:       >=1.10

-- For these to find your local docopt in ../, run
-- > cd examples/
-- > cabal sandbox init
-- > cabal sandbox add-source ../

executable naval-fate
  hs-source-dirs:      ./
  main-is:             NavalFate/Main.hs
  other-modules:       NavalFate.Shared
  build-depends:       base,
                       docopt
  ghc-options:         -Wall
  default-language:    Haskell2010

executable naval-fate-no-th
  hs-source-dirs:      ./
  main-is:             NavalFate/NoTH.hs
  other-modules:       NavalFate.Shared
  build-depends:       base,
                       docopt
  ghc-options:         -Wall
  default-language:    Haskell2010

executable simple
  hs-source-dirs:      ./
  main-is:             Simple.hs
  build-depends:       base,
                       docopt
  ghc-options:         -Wall
  default-language:    Haskell2010
